...
    <string name="create_text">Choose your audience</string>
    <string name="done">Done</string>
    <string name="open_permissions">Open permissions</string>
    <string name="settings_location">Location</string>
    <string name="settings_internet">Internet</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="settings_section1">Who can see your content</string>
    <string name="settings_account_privacy">Account privacy</string>
    <string name="settings_close_friends">Close friends</string>
    <string name="settings_blocked">Blocked</string>
    <string name="settings_messages">Messages</string>
    <string name="settings_section2">Your app and media</string>
    <string name="settings_suggested_content">Suggested content</string>
    <string name="settings_device_permissions">Device permissions</string>
    <string name="settings_accessibility">Accessibility</string>
    <string name="settings_language">Language</string>
    <string name="settings_more_info">More info and support</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="log_out_button">Log out</string>
    <string name="add_friend">Find User</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="messages">Messages</string>
    <string name="message_button">Message</string>
    <string name="invitations">Invitations</string>
...
