...
                // Empty title since we're placing our own components
              },
              navigationIcon = {
                IconButton(onClick = { nav.goBack() }) {
                  Icon(
                      imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                      contentDescription = "Back",
                      tint = MaterialTheme.colorScheme.onBackground)
                }
              })

          Row(
              verticalAlignment = Alignment.CenterVertically,
...
      onClick = { /* Go to the settings more in depth */},
      modifier = Modifier.padding(end = 15.dp),
      shape = CircleShape,
      color = Color.Transparent) {
        Icon(
            painter = painterResource(id = R.drawable.navigate_next),
            contentDescription = "Navigate next icon",
            modifier = Modifier.padding(15.dp),
            tint = MaterialTheme.colorScheme.onBackground)
      }
}

/**
...
